--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "Project for use in the first Stacc Girls Developer Workshop",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src",
-    "serve": "node src"
+    "start": "node src/index.js"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stacc-as/stacc-girls-workshop.git"
+    "type": "git"
   },
   "keywords": [
     "rest-api",
@@ -22,8 +20,5 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.9"
   }
 }
